--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2601,6 +2601,24 @@ config MACH_DELUXE_UL
         help
           Support for the HTC APQ8064 DELUXE_UL.
 
+config MACH_IMPRESSION_J
+        depends on ARCH_APQ8064
+        bool "APQ8064 IMPRESSION_J"
+        help
+          Support for the HTC APQ8064 IMPRESSION_J.
+
+config MACH_M7
+        depends on ARCH_APQ8064
+        bool "APQ8064 M7"
+        help
+          Support for the HTC APQ8064 M7.
+
+config MACH_VILLEC2
+        depends on ARCH_MSM8X60
+        bool "VILLEC2"
+        help
+          Support for the HTC VILLEC2 device.
+
 config HTC_HEADSET_ONE_WIRE
 	tristate "HTC 1-wire headset detection driver"
 	depends on HTC_HEADSET_MGR
