--- a/dna/initrd/init.rc
+++ b/dna/initrd/init.rc
@@ -432,17 +432,17 @@ on boot
     class_start core
     class_start main
 
-# This will grant permission for LMI Rescue Start Server
-    chown graphics /system/bin/RescueStarter
-    chmod 755 /system/bin/RescueStarter
-    chown graphics /system/bin/RescueServer
-    chmod 755 /system/bin/RescueServer
-
-# This will start LMI Rescue Start Server
-    service RescueStarter /system/bin/RescueStarter
-    class core
-    user graphics
-    group input graphics
+## This will grant permission for LMI Rescue Start Server
+#    chown graphics /system/bin/RescueStarter
+#    chmod 755 /system/bin/RescueStarter
+#    chown graphics /system/bin/RescueServer
+#    chmod 755 /system/bin/RescueServer
+#
+## This will start LMI Rescue Start Server
+#    service RescueStarter /system/bin/RescueStarter
+#    class core
+#    user graphics
+#    group input graphics
 
 on nonencrypted
     class_start late_start
