--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -589,6 +589,7 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
+CONFIG_CPU_VOLTAGE_TABLE=y
 
 #
 # Bus support
