--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -589,6 +589,8 @@ CONFIG_MULTI_IRQ_HANDLER=y
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_GPU_OVERCLOCK=y
+CONFIG_CPU_OVERCLOCK=y
 
 #
 # Bus support
