--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -589,8 +589,7 @@ CONFIG_MULTI_IRQ_HANDLER=y
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
-CONFIG_GPU_OVERCLOCK=y
-CONFIG_CPU_OVERCLOCK=y
+CONFIG_CPU_UNDERCLOCK=y
 
 #
 # Bus support
