--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2649,5 +2649,11 @@ config FORCE_FAST_CHARGE
 		A simple sysfs interface to force adapters that
 		are detected as USB to charge as AC.
 
+config CPU_UNDERCLOCK
+	bool "Underclok the CPU"
+	default	n
+	help
+		Enasble 192 MHzm mode
+
 endif
 
