Grab dsb's overclocking tables

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -592,6 +592,7 @@ CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CPU_UNDERCLOCK=y
+CONFIG_CPU_OVERCLOCK=y
 
 #
 # Bus support
