--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1655,6 +1655,12 @@ config MSM_CPU_FREQ_MIN
 
 endif # CPU_FREQ_MSM
 
+config SIMPLE_PLUG
+	bool "Enable simple-plug cpu hotplug driver"
+	default n
+	help
+	  Generic simple-plug cpu hotplug driver for ARM SOCs
+
 config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"
 	default n
