--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1661,6 +1661,12 @@ config INTELLI_PLUG
 	help
 	  Generic Intelli-plug cpu hotplug driver for ARM SOCs
 
+config SIMPLE_PLUG
+	bool "Enable simple-plug cpu hotplug driver"
+	default n
+	help
+	  Generic simple-plug cpu hotplug driver for ARM SOCs
+
 config CPU_VOLTAGE_TABLE
 	bool "Enable CPU Voltage Table via sysfs for adjustements"
 	default n
