defconfig: disable more debugging, stats and HTC special hooks
In particular, I'm disabling the HTC PNP power manager.

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.29 Kernel Configuration
+# Linux/arm 3.4.33 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -395,11 +395,7 @@ CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE=y
 CONFIG_MSM7X00A_IDLE_SLEEP_MODE=1
 CONFIG_MSM7X00A_IDLE_SLEEP_MIN_TIME=20000000
 CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
-CONFIG_MSM_IDLE_STATS=y
-CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
-CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
-CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
-CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
+# CONFIG_MSM_IDLE_STATS is not set
 CONFIG_CPU_HAS_L2_PMU=y
 # CONFIG_HTC_HEADSET is not set
 CONFIG_HTC_HEADSET_MGR=y
@@ -413,7 +409,7 @@ CONFIG_HTC_HEADSET_PMIC=y
 CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_BAM_DMUX=y
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
@@ -434,6 +430,7 @@ CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 # CONFIG_INTELLI_PLUG is not set
 CONFIG_SIMPLE_PLUG=y
+# CONFIG_SIMPLE_PLUG_STATS is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -491,9 +488,9 @@ CONFIG_MSM_WATCHDOG=y
 # CONFIG_MSM_WATCHDOG_V2 is not set
 # CONFIG_MSM_DLOAD_MODE is not set
 # CONFIG_MSM_JTAG is not set
-CONFIG_MSM_SLEEP_STATS=y
+# CONFIG_MSM_SLEEP_STATS is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
-CONFIG_MSM_RUN_QUEUE_STATS=y
+# CONFIG_MSM_RUN_QUEUE_STATS is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -513,8 +510,7 @@ CONFIG_MSM_SPM_V2=y
 CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 # CONFIG_MSM_OCMEM is not set
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
@@ -522,7 +518,7 @@ CONFIG_MSM_L1_ERR_LOG=y
 # CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS is not set
 # CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
-CONFIG_MSM_DCVS=y
+# CONFIG_MSM_DCVS is not set
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 CONFIG_MSM_HSIC_SYSMON=y
@@ -537,8 +533,6 @@ CONFIG_HTC_HEADSET_ONE_WIRE=y
 CONFIG_SUPPORT_USB_SPEAKER=y
 CONFIG_SENSE_4_PLUS=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_CPU_UNDERCLOCK=y
-CONFIG_CPU_OVERCLOCK=y
 
 #
 # System MMU
@@ -596,7 +590,6 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_775420 is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
-CONFIG_CPU_VOLTAGE_TABLE=y
 
 #
 # Bus support
@@ -617,8 +610,8 @@ CONFIG_HAVE_SMP=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_ARM_CPU_TOPOLOGY=y
-# CONFIG_SCHED_MC is not set
-# CONFIG_SCHED_SMT is not set
+CONFIG_SCHED_MC=y
+CONFIG_SCHED_SMT=y
 CONFIG_HAVE_ARM_SCU=y
 # CONFIG_ARM_ARCH_TIMER is not set
 CONFIG_VMSPLIT_3G=y
@@ -673,7 +666,7 @@ CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_SECCOMP is not set
-CONFIG_CC_STACKPROTECTOR=y
+# CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_CP_ACCESS=y
@@ -713,7 +706,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
 CONFIG_INTELLI_MAX_INACTIVE_FREQ=1134000
@@ -776,8 +769,8 @@ CONFIG_PM=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
-CONFIG_HTC_PNPMGR=y
-CONFIG_ADAPTIVE_TUNING=y
+# CONFIG_HTC_PNPMGR is not set
+# CONFIG_ADAPTIVE_TUNING it not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
@@ -1138,7 +1131,6 @@ CONFIG_BT_BNEP=y
 # CONFIG_BT_BNEP_MC_FILTER is not set
 # CONFIG_BT_BNEP_PROTO_FILTER is not set
 CONFIG_BT_HIDP=y
-CONFIG_BT_HID_BRCM=y
 
 #
 # Bluetooth device drivers
@@ -1155,8 +1147,10 @@ CONFIG_BT_HCIBPA10X=y
 CONFIG_BT_HCIBFUSB=y
 CONFIG_BT_HCIVHCI=y
 CONFIG_BT_MRVL=y
+# CONFIG_BT_MRVL_SDIO is not set
 CONFIG_BT_ATH3K=y
 CONFIG_MSM_BT_POWER=m
+CONFIG_BT_HID_BRCM=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -3252,7 +3246,7 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_NTFS_FS=y
+CONFIG_NTFS_FS=m
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
 
