--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -496,7 +496,7 @@ CONFIG_MSM_SLEEP_STATS=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
-CONFIG_MSM_SHOW_RESUME_IRQ=y
+# CONFIG_MSM_SHOW_RESUME_IRQ is not set
 # CONFIG_MSM_FAKE_BATTERY is not set
 # CONFIG_MSM_BATTERY_DEBUG is not set
 CONFIG_APQ8064_ONLY=y
