--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1135,6 +1135,7 @@ CONFIG_BT_HIDP=y
 #
 # Bluetooth device drivers
 #
+CONFIG_BT_HCISMD=m
 CONFIG_BT_HCIBTUSB=y
 CONFIG_BT_HCIBTSDIO=y
 CONFIG_BT_HCIUART=y
@@ -1142,15 +1143,16 @@ CONFIG_BT_HCIUART_H4=y
 CONFIG_BT_HCIUART_BCSP=y
 CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIUART_LL=y
+CONFIG_BT_HCIUART_IBS=y
 CONFIG_BT_HCIBCM203X=y
 CONFIG_BT_HCIBPA10X=y
+CONFIG_BT_MSM_SLEEP=m
 CONFIG_BT_HCIBFUSB=y
 CONFIG_BT_HCIVHCI=y
 CONFIG_BT_MRVL=y
 CONFIG_BT_MRVL_SDIO=y
-CONFIG_BT_ATH3K=y
 CONFIG_MSM_BT_POWER=m
-CONFIG_BT_HID_BRCM=y
+CONFIG_BT_ATH3K=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
