Disable a module that wasn't compiling

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1146,7 +1146,7 @@ CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_HCIUART_IBS=y
 CONFIG_BT_HCIBCM203X=y
 CONFIG_BT_HCIBPA10X=y
-CONFIG_BT_MSM_SLEEP=m
+# CONFIG_BT_MSM_SLEEP is not set
 CONFIG_BT_HCIBFUSB=y
 CONFIG_BT_HCIVHCI=y
 CONFIG_BT_MRVL=y
