Don't bother setting frequencies
This was pulled in from dsb's kernel and wasn't part of stock.  Since
I don't know why it was added in the first place, back it out.

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -425,9 +425,7 @@ CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
-CONFIG_MSM_CPU_FREQ_MIN=192000
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 # CONFIG_INTELLI_PLUG is not set
 CONFIG_SIMPLE_PLUG=y
 # CONFIG_SIMPLE_PLUG_STATS is not set
