--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.34 Kernel Configuration
+# Linux/arm 3.4.37 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -3193,7 +3193,19 @@ CONFIG_IOMMU_PGTABLES_L2=y
 # Rpmsg drivers (EXPERIMENTAL)
 #
 # CONFIG_VIRT_DRIVERS is not set
-# CONFIG_PM_DEVFREQ is not set
+CONFIG_PM_DEVFREQ=y
+
+#
+# DEVFREQ Governors
+#
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=y
+CONFIG_DEVFREQ_GOV_POWERSAVE=y
+CONFIG_DEVFREQ_GOV_USERSPACE=y
+
+#
+# DEVFREQ Drivers
+#
 # CONFIG_FELICA_CXD2235_DD is not set
 # CONFIG_MOBICORE_SUPPORT is not set
 # CONFIG_MSM_QDSS is not set
