crpalmer_defconfig: update to match HTC's changes
And increase the frame warning size to match the new code

NOTE: this is the actual 2.0.0 build point

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -766,7 +766,7 @@ CONFIG_NET=y
 # Networking options
 #
 CONFIG_PACKET=y
-# CONFIG_HTC_NETWORK_MODIFY is not set
+CONFIG_HTC_NETWORK_MODIFY=y
 CONFIG_UNIX=y
 # CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
@@ -2355,7 +2355,7 @@ CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
 CONFIG_MSM_KGSL_2D=y
-# CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
+CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE_FOR_IOMMU=0x1fe00000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
@@ -3325,7 +3325,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=6
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
-CONFIG_FRAME_WARN=1024
+CONFIG_FRAME_WARN=2048
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
 # CONFIG_UNUSED_SYMBOLS is not set
