--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1509,7 +1509,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/etc/calibration"
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_MWIFIEX is not set
-CONFIG_BCMDHD_4334=y
+CONFIG_BCMDHD_4334=m
 CONFIG_HTC_IGNORE_SKB_ALIGNMENT=y
 # CONFIG_BCMDHD_4335 is not set
 
@@ -2436,14 +2436,14 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
-CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
-CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
-CONFIG_FB_MSM_MIPI_DSI_TRULY=y
-CONFIG_FB_MSM_MIPI_DSI_SIMULATOR=y
-CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
-CONFIG_FB_MSM_MIPI_DSI_NT35510=y
-CONFIG_FB_MSM_MIPI_DSI_ORISE=y
-CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
+# CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
+CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
+# CONFIG_FB_MSM_MIPI_DSI_TRULY is not set
+# CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
+# CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
+# CONFIG_FB_MSM_MIPI_DSI_NT35510 is not set
+# CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
+# CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -2461,23 +2461,23 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_WXGA is not set
 CONFIG_FB_MSM_LVDS_CHIMEI_WXGA=y
 CONFIG_FB_MSM_LVDS_FRC_FHD=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT=y
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA=y
-CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT=y
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT is not set
 CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT=y
+# CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
-CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
-CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA=y
-CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT=y
-CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
+# CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
+# CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT is not set
+# CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
@@ -2499,7 +2499,7 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
-CONFIG_FB_MSM_LVDS_MIPI_PANEL_DETECT=y
+# CONFIG_FB_MSM_LVDS_MIPI_PANEL_DETECT is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_VGA is not set
@@ -2512,7 +2512,7 @@ CONFIG_FB_MSM_LVDS_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_720P_PT_PANEL is not set
-# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT_PANEL is not set
+CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT_PANEL=y
 # CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA_PANEL is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA_PANEL is not set
