--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -422,7 +422,9 @@ CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
+CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
 CONFIG_SIMPLE_PLUG=y
 # CONFIG_SIMPLE_PLUG_STATS is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
