crpalmer_defconfig: fixup the config based on current Kconfigs

--- a/arch/arm/configs/crpalmer_defconfig
+++ b/arch/arm/configs/crpalmer_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.37 Kernel Configuration
+# Linux/arm 3.4.41 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -92,9 +92,6 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_MEM_RES_CTLR is not set
 # CONFIG_CGROUP_PERF is not set
 # CONFIG_CGROUP_SCHED is not set
-CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
-# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_NAMESPACES is not set
@@ -331,7 +328,6 @@ CONFIG_ARCH_APQ8064=y
 # CONFIG_MACH_ELITE is not set
 # CONFIG_MACH_VILLE is not set
 # CONFIG_MACH_JET is not set
-# CONFIG_MACH_JEWEL_DD is not set
 # CONFIG_ARCH_FSM9XXX is not set
 # CONFIG_ARCH_MSM9615 is not set
 # CONFIG_ARCH_MSM8625 is not set
@@ -422,6 +418,7 @@ CONFIG_MSM_DSPS=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
 CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
 CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
@@ -520,9 +517,6 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MACH_MONARUDO=y
-# CONFIG_MACH_DELUXE_J is not set
-# CONFIG_MACH_DELUXE_U is not set
-# CONFIG_MACH_DELUXE_UL is not set
 CONFIG_HTC_HEADSET_ONE_WIRE=y
 CONFIG_SUPPORT_USB_SPEAKER=y
 CONFIG_SENSE_4_PLUS=y
@@ -1134,7 +1128,6 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 CONFIG_MSM_BT_POWER=y
-CONFIG_BT_HID_BRCM=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -2362,6 +2355,7 @@ CONFIG_MSM_KGSL_2D=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE_FOR_IOMMU=0x1fe00000
+CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=8
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_MSM_KGSL_GPU_USAGE is not set
@@ -2425,7 +2419,7 @@ CONFIG_FB_MSM_MDP40=y
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
-CONFIG_FB_MSM_LVDS=y
+# CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_MSM_AUTOBL_ENABLE is not set
 CONFIG_FB_MSM_DTV=y
@@ -2439,13 +2433,10 @@ CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL is not set
 # CONFIG_FB_MSM_MIPI_DSI_TOSHIBA is not set
-CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
-# CONFIG_FB_MSM_MIPI_DSI_TRULY is not set
+CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
-# CONFIG_FB_MSM_MIPI_DSI_NT35510 is not set
 # CONFIG_FB_MSM_MIPI_DSI_ORISE is not set
-# CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -2461,8 +2452,8 @@ CONFIG_FB_MSM_MIPI_DSI_RENESAS is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT is not set
 # CONFIG_FB_MSM_LCDC_NT35582_WVGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
-CONFIG_FB_MSM_LVDS_CHIMEI_WXGA=y
-CONFIG_FB_MSM_LVDS_FRC_FHD=y
+# CONFIG_FB_MSM_LVDS_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_LVDS_FRC_FHD is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WUXGA is not set
@@ -2478,7 +2469,6 @@ CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
-# CONFIG_FB_MSM_MIPI_TRULY_VIDEO_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
@@ -3160,6 +3150,7 @@ CONFIG_HAVE_CLK_PREPARE=y
 #
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_MSM_IOMMU=y
+CONFIG_MSM_IOMMU_GPU_SYNC=y
 CONFIG_IOMMU_PGTABLES_L2=y
 
 #
